plugins {
    java
}

group = "net.azisaba.lifemoremythicmobs"
version = "2.5.4-1.21.11"

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "papermc-repo"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
    maven {
        name = "sonatype"
        url = uri("https://oss.sonatype.org/content/groups/public/")
    }
    maven {
        name = "Lumine Releases"
        url = uri("https://mvn.lumine.io/repository/maven-public/")
    }
    maven {
        name = "jitpack"
        url = uri("https://jitpack.io")
    }
    maven {
        name = "mypet"
        url = uri("https://repo.mypet-plugin.de/")
    }
    maven {
        name = "azisaba-repo"
        url = uri("https://repo.azisaba.net/repository/maven-public/")
    }
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT")
    val mythicMobsJar = providers.gradleProperty("mythicMobsJar").orNull
    if (mythicMobsJar != null) {
        compileOnly(files(mythicMobsJar))
    } else {
        compileOnly("io.lumine:Mythic-Dist:5.12.0")
    }
    compileOnly("com.github.MyPetORG.MyPet:mypet-api:5c8ceeac6a")
    compileOnly("org.jetbrains:annotations:24.0.1")
    compileOnly("org.json:json:20231013")

    testImplementation("org.junit.jupiter:junit-jupiter:5.11.4")
    testImplementation("org.junit.platform:junit-platform-launcher:1.11.4")
    testImplementation("org.mockito:mockito-core:5.14.2")
    testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
}

tasks.test {
    useJUnitPlatform()
    testLogging {
        events("passed", "skipped", "failed")
        showStandardStreams = true
    }
}

java.toolchain.languageVersion.set(JavaLanguageVersion.of(21))

tasks {
    compileJava {
        options.encoding = "UTF-8"
        options.compilerArgs.add("-Xlint:deprecation")
    }

    processResources {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE

        from(
            sourceSets.main
                .get()
                .resources.srcDirs,
        ) {
            filter(org.apache.tools.ant.filters.ReplaceTokens::class, mapOf("tokens" to mapOf("version" to project.version.toString())))
            filteringCharset = "UTF-8"
        }
    }
}
